fixed maring issues on mobile in resume section

--- a/css/basic.css
+++ b/css/basic.css
@@ -73,7 +73,7 @@ i:active {
     section {
         border: solid 2px red;
         width: 100%;
-        margin: 0 auto 0 1em;
+        margin: 0 auto 0 0em;
         /* height: auto; */
     }
 }
