--- a/css/resume.css
+++ b/css/resume.css
@@ -75,3 +75,29 @@
 .skills-list li {
     padding: 1em;
 }
+
+@media (max-width: 400px) {
+    .skills .title {
+        padding: 0;
+    }
+    .resume-items {
+        padding: 1em;
+        margin: 0.5em;
+    }
+    .skills-wrapper {
+        padding: 0;
+        margin: 0 0.5em;
+        align-items: center;
+        min-width: 70px;
+    }
+    .skills-list {
+        display: flex;
+        margin: 0 auto;
+        padding: 0;
+    }
+    .resume-item,
+    .resume .title,
+    .skills .title {
+        padding: 2em 0;
+    }
+}
